--- a/comic.html
+++ b/comic.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
-    <script type="text/javascript" src="spiral.js"></script>
-    <link rel="stylesheet" href="spiral.css">
+    <script type="text/javascript" src="comic.js"></script>
+    <link rel="stylesheet" href="comic.css">
   </head>
 <body>
   <fieldset id="control">
     <fieldset id="buttons">
-      <button id="picker" class="normal" data-i18n>modes.spiral.filepick.button</button>
+      <button id="picker" class="normal" data-i18n>modes.comic.filepick.button</button>
       <button id="pause" disabled="disabled" class="ready" data-i18n="common.action.start"></button>
       <button id="cancel" disabled="disabled" data-i18n="[title]common.action.canceltitle;common.action.cancel"></button>
       <button id="pen" class="normal" data-i18n>common.action.brush.lower</button>
