--- a/comic.html
+++ b/comic.html
@@ -17,6 +17,28 @@
       <div id="repeatcontrols">
         <label for="repeattimes">Repeat line times</label>
         <input id="repeattimes" class="managed" class="normal" type="number" value="1">
+
+        <div id="advancedcontrols">
+          <label for="printcolor">Print color</label>
+          <form class="managed" id="printcolor" style="float: right;">
+            <label for="printcolor-black">All</label>
+            <input type="radio" name="leveltype" id="printcolor-black" value="all" /> <br>
+
+            <label for="printcolor-black">Black</label>
+            <input type="radio" name="leveltype" id="printcolor-black" value="black" checked/> <br>
+
+            <label for="printcolor-cyan">Cyan</label>
+            <input type="radio" name="leveltype" id="printcolor-cyan" value="cyan" /> <br>
+
+            <label for="printcolor-magenta">Magenta</label>
+            <input type="radio" name="leveltype" id="printcolor-magenta" value="magenta" /> <br>
+
+            <label for="printcolor-yellow">Yellow</label>
+            <input type="radio" name="leveltype" id="printcolor-yellow" value="yellow" /> <br>
+          </form>
+
+          <button id="update" class="normal">Update preview</button>
+        </div>
       </div>
     </fieldset>
   </fieldset>
