--- a/comic.html
+++ b/comic.html
@@ -19,6 +19,11 @@
         <input id="repeattimes" class="managed" class="normal" type="number" value="1">
 
         <div id="advancedcontrols">
+          <form class="managed" id="ditherform" style="">
+            <label for="ditherenabled">Dither</label>
+            <input type="checkbox" id="ditherenabled"/> <br>
+          </form>
+
           <label for="printcolor">Print color</label>
           <form class="managed" id="printcolor" style="float: right;">
             <label for="printcolor-black">All</label>
